--- a/blogpost.html
+++ b/blogpost.html
@@ -14,7 +14,7 @@
                      del post</h1>
                 <p>Y este es el párrafo de inicio donde vamos a
                     explicar las cosas increíbles que se pueden
-                    hacer con ramas.</p>
+                    hacer con ramas. Otras palabras.</p>
             </div>
         </div>
 </body>
