--- a/blogpost.html
+++ b/blogpost.html
@@ -10,7 +10,8 @@
 <body>
         <div id="container">
             <div id="cabecera">
-                Aquí inicia la cabecera.
+                Hyperblog
+                <span id="tagline">Tu blog de confianza.</span>
             </div>
             <div id="post">
                 <h1>Este es el título atractivo e interesante
