--- a/blogpost.html
+++ b/blogpost.html
@@ -7,7 +7,7 @@
     <title>Bienvenido a Hyperblog 2.0</title>
     <link rel="stylesheet" href="css/estilos.css"/>
 </head>
-<body>
+    <body>
         <div id="container">
             <div id="cabecera">
                 Hyperblog
@@ -26,6 +26,9 @@
                     estadísticamente, no lo eres... por ahora.</p>
                 <p>Suscríbete y dale like.</p>
             </div>
+	    <div id="footer">
+		Hecho con amor en Platzi <3
+	    </ div>
         </div>
-</body>
+    </body>
 </html>
