--- a/blogpost.html
+++ b/blogpost.html
@@ -19,7 +19,8 @@
                      del post</h1>
                 <p>Y este es el párrafo de inicio donde vamos a
                     explicar las cosas increíbles que se pueden
-                    hacer con ramas. Otras palabras.</p>
+                    hacer con ramas.</p>
+                <p><img src="Images/PinkFloyd.jpg" width="70%" /></p>
                 <p>Los blogs son la mejor forma de compartir 
                     información y tus ideas.
                     Mucho más que ir a conferencias o salir en
