--- a/blogpost.html
+++ b/blogpost.html
@@ -20,7 +20,7 @@
                 <p>Y este es el párrafo de inicio donde vamos a
                     explicar las cosas increíbles que se pueden
                     hacer con ramas.</p>
-                <p><img src="Images/PinkFloyd.jpg" width="70%" /></p>
+                <p><img src="https://wallpaperaccess.com/full/1868409.jpg" width="70%" /></p>
                 <p>Los blogs son la mejor forma de compartir 
                     información y tus ideas.
                     Mucho más que ir a conferencias o salir en
